# rust-client

./: Cargo.toml
src/: client.rs  errors.rs  lib.rs
