[package]
name = "wundergraph-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tls = ["reqwest/default-tls"]

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
futures-core = "0.3.28"
futures-util = "0.3.28"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tracing = "0.1.37"
